2010-06-22  Mike Frysinger  <vapier@gentoo.org>

  * src/tap/usbconn/libftdi.c (usbconn_ftdi_flush): Fix gcc printf warning.

  * configure.ac: Have the libftdi + libusb-1.0 error give a tip about using
    --with-async-mode with the libftdi package when erroring out.

2010-06-21  Mike Frysinger  <vapier@gentoo.org>

  * src/bus/bf518f_ezbrd.c (urj_bus_bf51x_bus): Fix copy & paste typo in name.

2010-06-16  Mike Frysinger  <vapier@gentoo.org>

  * acinclude.m4 (VL_LIB_READLINE): Add a --with[out]-readline configure
    option so people can explicitly control support for the library.

  * configure.ac (AC_CHECK_FUNCS): Check for geteuid and getuid functions.
  * sysdep.h: Key off of HAVE_xxx defines for geteuid/getuid stubs.

  * configure.ac (AC_CHECK_HEADERS): Move windows.h check here, as well as
    IN/OUT namespace pollution checks.
  * sysdep.h: Key off of HAVE_WINDOWS_H for windows.h include.  Drop the
    NO_W32_PSEUDO_MODIFIERS defines since they're in configure.ac now.

2010-06-15  Mike Frysinger  <vapier@gentoo.org>

  * src/bus/s3c4510x.c: Punt dead/useless cvs log info.

  * src/tap/cable.c (urj_tap_cable_create): Call urj_bus_buses_delete() rather
    than manipulate urj_bus directly so the urj_buses structure doesn't get
    corrupted.  Otherwise we segfault when changing cables after initializing a
    bus: cable probe; detect; initbus ...; detectflash ...; cable probe; detect
  * src/apps/jtag/jtag.c (cleanup): Call urj_bus_buses_free() to clean up all
    buses and not just the active one.
    http://blackfin.uclinux.org/gf/tracker/6028

2010-06-14  Mike Frysinger  <vapier@gentoo.org>

  * configure.ac: Drop stropts.h check since parport code no longer uses it.

  * configure.ac: Check for sys/wait.h usability.
  * src/cmd/cmd_bfin.c: Include sys/wait.h when available since we use macros
    from it, and change the mingw check to key off this header instead to make
    things a bit more portable.
